--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -2,9 +2,9 @@ name: Base CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
